--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.1",
     "googleapis": "^131.0.0",
-    "punycode": "^2.3.1",
-    "multer": "^1.4.5-lts.1"
+    "memorystore": "^1.6.7",
+    "multer": "^1.4.5-lts.1",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
